@startuml

title __OBJECTS's Class Diagram__\n

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Camera {
          - defaultZ : float
          - fieldOfView : float[]
          - nearFarPlanes : float[]
          - resolution : int[]
          + Camera()
          + calculatePositionsToRay()
          + getDefaultZ()
          + getFieldOfView()
          + getFieldOfViewHorizontal()
          + getFieldOfViewVertical()
          + getIntersection()
          + getNearFarPlanes()
          + getResolution()
          + getResolutionHeight()
          + getResolutionWidth()
          + setDefaultZ()
          + setFieldOfView()
          + setFieldOfViewHorizontal()
          + setFieldOfViewVertical()
          + setNearFarPlanes()
          + setResolution()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      abstract class up.edu.isgc.raytracer.objects.Object3D {
          - color : Color
          - ligth : boolean
          + Object3D()
          + getColor()
          + getPosition()
          + setColor()
          + setPosition()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Polygon {
          + triangles : List<Triangle>
          + Polygon()
          + getIntersection()
          + getTriangles()
          + setTriangles()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Sphere {
          - radius : float
          + Sphere()
          + getIntersection()
          + getRadius()
          + setRadius()
      }
    }
  }
  

  namespace up.edu.isgc.raytracer {
    namespace objects {
      class up.edu.isgc.raytracer.objects.Triangle {
          {static} + EPSILON : double
          - normals : Vector3D[]
          - vertices : Vector3D[]
          + Triangle()
          + Triangle()
          + Triangle()
          + getIntersection()
          + getNormal()
          + getNormals()
          + getVertices()
          + setNormals()
          + setNormals()
          + setVertices()
          - setVertices()
      }
    }
  }
  

  up.edu.isgc.raytracer.objects.Camera -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Object3D .up.|> up.edu.isgc.raytracer.IIntersectable
  up.edu.isgc.raytracer.objects.Object3D o-- up.edu.isgc.raytracer.Vector3D : position
  up.edu.isgc.raytracer.objects.Polygon -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Sphere -up-|> up.edu.isgc.raytracer.objects.Object3D
  up.edu.isgc.raytracer.objects.Triangle .up.|> up.edu.isgc.raytracer.IIntersectable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
